--- a/public/success.html
+++ b/public/success.html
@@ -1,1 +1,29 @@
-Thanh toán thành công
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Payment Success</title>
+</head>
+<body>
+    <h1>Payment Success</h1>
+    <div id="result"></div>
+    <script>
+        // Function to fetch query parameters from the URL
+        function getQueryParams() {
+            const params = {};
+            window.location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(str, key, value) {
+                params[key] = value;
+            });
+            return params;
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const params = getQueryParams();
+            document.getElementById('result').innerHTML = `
+                <p>Transaction ID: ${params.id}</p>
+                <p>Paid Amount: ${params.price}</p>
+            `;
+        });
+    </script>
+</body>
+</html>
