--- a/public/success.html
+++ b/public/success.html
@@ -16,14 +16,32 @@
             });
             return params;
         }
+        const params = getQueryParams();
 
         document.addEventListener('DOMContentLoaded', () => {
-            const params = getQueryParams();
+            
             document.getElementById('result').innerHTML = `
                 <p>Transaction ID: ${params.id}</p>
                 <p>Paid Amount: ${params.price}</p>
             `;
         });
+        fetch('api', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({id: id })  // Send any data required by the server, such as the price
+            })
+            .then(function(response) {
+                return response.json();
+            })
+            .then(function(session) {
+                // Use the session ID to redirect to Stripe's checkout page
+                stripe.redirectToCheckout({ sessionId: session.sessionId });
+            })
+            .catch(function(error) {
+                console.error('Error:', error);
+            });
     </script>
 </body>
 </html>
